changed nav bar, no longer overflows on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ ul.topnav li.icon {display: none;}
 
 /*Responsive Styling*/
 
-@media screen and (max-width:680px) {
+@media screen and (max-width:1000px) {
   ul.topnav li:not(:first-child) {display: none;}
   ul.topnav li.icon {
     float: left;
@@ -106,7 +106,7 @@ ul.topnav li.icon {display: none;}
   }
 }
 
-@media screen and (max-width:680px) {
+@media screen and (max-width:1000px) {
   ul.topnav.responsive {position: relative;}
   ul.topnav.responsive li.icon {
     position: absolute;
